--- a/svm-latex-cv.tex
+++ b/svm-latex-cv.tex
@@ -173,13 +173,11 @@ $endfor$
 
 
 % Make lists without bullets
+
 \renewenvironment{itemize}{
   \begin{list}{}{
-    \setlength{\leftmargin}{1.5em}
-  }
-}{
-  \end{list}
-}
+    \setlength{\leftmargin}{1.5em}}}{
+  \end{list}}
 
 
 % Make parskips rather than indent with lists.
