--- a/cv.Rmd
+++ b/cv.Rmd
@@ -222,7 +222,7 @@ Michigan State University, Dept. of Counseling, Educational Psychology, & Specia
 * \* Students develop plans for integrating technology in classroom.
 * \* The semester-long project is to design a professional *online portfolio*.
 
-**Learning Technology through Design** (Master’s, online, 3x) \hfill 2018-present
+**Learning Technology by Design** (Master’s, online, 3x) \hfill 2018-present
 
 * \* Course topics include design thinking, the design process (empathize, define, ideate, prototype, test), designing for learners, iterative design. and collaboration in design.
 * \* Students discuss examples of good and bad designs from everyday life.
@@ -321,7 +321,7 @@ Michigan State University, Dept. of Counseling, Educational Psychology, & Specia
 Michigan State University, College of Education \hfill East Lansing MI  
 Department of Counseling, Educational Psychology, & Special Education
 
-* \* Taught courses at the Master's and undergraduate levels
+* \* Taught courses at the Master's and Undergraduate levels
 
 **Course Writer** \hfill 2019  
 Concordia University, College of Education \hfill Portland OR  
